adding about text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-    
+        <p>this site was created for a class.</p>
          <img src="img/300head.jpeg" class="portrait">
     </div>
     
